fixed problem with horizontal scrollbar showing up due to overflow

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body{
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
-  padding: 6rem 0 0 0; 
+  padding: 6rem 0 0 0;
   box-sizing: border-box;
 
   display: flex;
@@ -18,7 +18,6 @@ body{
 header{
   position: fixed;
   top: 0;
-
   width: 100vw;
   height: 6em;
   background: rgb(215, 215, 198);
@@ -33,7 +32,6 @@ h1{
 }
 
 #app {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -43,7 +41,6 @@ h1{
 footer{
   background-color: rgb(43, 49, 43);
   padding: 2em;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,9 +58,6 @@ i{
 }
 
 @media only screen and (min-width: 793px) {
- #app{
-  height: 90vh;
- }
 
  footer{
   flex-direction: row;
